Add R notebooks: into to lesson 04

--- a/r/01-vectors-factors.ipynb
+++ b/r/01-vectors-factors.ipynb
@@ -29,37 +29,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<ol class=list-inline>\n",
-       "\t<li>22</li>\n",
-       "\t<li>36</li>\n",
-       "\t<li>31</li>\n",
-       "\t<li>29</li>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 22\n",
-       "\\item 36\n",
-       "\\item 31\n",
-       "\\item 29\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 22\n",
-       "2. 36\n",
-       "3. 31\n",
-       "4. 29\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 22 36 31 29"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 22 36 31 29\n"
+     ]
     },
     {
      "data": {
@@ -86,7 +60,7 @@
     "names <- c(\"Alice\", \"Bob\", \"Clara\", \"David\")\n",
     "\n",
     "# Vector operations\n",
-    "ages + 1\n",
+    "print(ages + 1)\n",
     "names[2]"
    ]
   },
